# project_4

./: .gitignore  CMakeLists.txt  README.md  linked_list.c  linked_list.h  list_functions.c  list_functions.h  main.c  mem_management.c  mem_management.h  thread_functions.c  thread_functions.h
